--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             padding-right: 3rem;
         }
         iframe[src*="ipcamlive.com"] {
+            /* width: 30vw; */
             width: 100%;
             height: auto;
             aspect-ratio: 16/9;
@@ -26,7 +27,7 @@
 </head>
 <body>
     <div class="webcam">
-        <iframe src="https://g0.ipcamlive.com/player/player.php?alias=adriaski" width="480" height="360" frameborder="0" allowfullscreen=""></iframe>
+        <iframe src="https://g0.ipcamlive.com/player/player.php?alias=adriaski" frameborder="0" allowfullscreen=""></iframe>
     </div>
     <div class="content">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta repellendus fugiat voluptatem a officiis, vitae nisi eum repellat dolorum, distinctio, ex quam ratione voluptatum beatae eligendi? Mollitia illum provident laboriosam.
